# asvspoof5-domain-invariant-cm

./: .gitignore  README.md  pyproject.toml
configs/: w2v2_dann.yaml  w2v2_dann_v2.yaml  w2v2_erm_aug.yaml  wavlm_dann.yaml  wavlm_dann_exponential.yaml  wavlm_erm_aug.yaml
docs/: MULTI_SEED.md  RQ4_FINDINGS.md  THESIS_SUMMARY.md  dataset.md  domains.md  evaluation.md  limitations.md  methodology.md
docs/analysis/: wavlm_vs_wav2vec2.md
docs/presentation/: presentation.html
figures/tables/: T1_main_results.md  T1_main_results.tex  T2_per_codec.md  T2_per_codec.tex  T2_per_codec_eer_seeds.md  T2_per_codec_eer_seeds.tex  T2_per_codec_mindcf_seeds.md  T2_per_codec_mindcf_seeds.tex  T3_ood_gap.md  T3_ood_gap.tex  T4_projection_probes.md  T4_projection_probes.tex  T5_dataset_stats.md  T5_dataset_stats.tex  T6_augmentation.md  T6_augmentation.tex  T7_hyperparameters.md  T7_hyperparameters.tex  shortcut_classifier_table.md  shortcut_classifier_table.tex
notebooks/: rq4_activation_patching.ipynb  rq4_activation_patching.py  thesis_results.ipynb
outputs/tables/: t1_overall_results.csv  t1_overall_results.tex  t2_ood_gap.csv  t2_ood_gap.tex  (+4 more)
results/: dev_eer_multiseed.json  headline_seeds_summary.csv  per_codec_seeds_summary.csv  rq3_projection.json  rq3_projection_v2.json  rq3_projection_w2v2.json  rq3_projection_w2v2_v2.json  rq4_cka_results.csv  rq4_metadata.json  rq4_results_summary.csv  rq4_stats_summary.csv  rq4_stats_summary.md  shortcut_classifier.json
scripts/: aggregate_full_seeds_summary.py  aggregate_per_codec_seeds.py  analyze_codec_coverage.py  compare_backbone_codec_probes.py  eval_sklearn_baseline.py  evaluate.py  extract_dann_dynamics.py  generate_thesis_tables.py  plot_codec_artifacts.py  plot_codec_probe_vs_pool_shift.py  plot_det_curves.py  plot_lambda_ablation.py  plot_ood_gap.py  plot_ood_gap_multi_seed.py  plot_pca.py  plot_per_codec.py  plot_per_codec_bias.py  plot_pool_weight_trajectory.py  plot_pooling_weights.py  plot_rq3_combined.py  plot_rq3_projection_probe.py  plot_rq4_intervention.py  plot_rq4_representation_dr.py  plot_transplant_results.py  precompute_augmentations.py  probe_projection.py  recompute_seed42_erm_metrics.py  rq4_stats.py  run_patching.py  shortcut_classifier.py  thesis_style.py  train.py  visualize_augmentation.py
(+331 files in other folders)
